Fixed: screen overflowing issues on Hero page

--- a/src/sass/base/_global.scss
+++ b/src/sass/base/_global.scss
@@ -4,15 +4,19 @@
      box-sizing: border-box; 
 }
 
+html{
+    max-width: 100vw;
+    overflow-x: hidden;
+}
+
 body{
     margin: 0;
     background-color: $color-background;
     color: $color-primary;
-    width: 100vw;
     -ms-overflow-style: none;
     scrollbar-width: none;
 
-    &::-webkit-scrollbar{
+    &::-webkit-scrollbar {
         display: none;
     }
 }
