--- a/src/sass/base/_keyframes.scss
+++ b/src/sass/base/_keyframes.scss
@@ -9,6 +9,27 @@
     }
 
     70%{
+        transform: rotate(315deg) translate(-200px);
+        opacity: 0;
+    }
+
+    100%{
+        transform: rotate(315deg) translate(-200px);
+        opacity: 0;
+    }
+}
+
+@keyframes animate-stars-desktop{
+    0%{
+        transform: rotate(315deg) translate(0);
+        opacity: 0;
+    }
+
+    30%{
+        opacity: 1;
+    }
+
+    70%{
         transform: rotate(315deg) translate(-400px);
         opacity: 0;
     }
@@ -21,14 +42,14 @@
 
 @keyframes planet-bounce{
     0%{
-        transform: translateY(10px) rotate(-45deg);
+        transform: translateY(10px);
     }
 
     50%{
-        transform: translateY(-10px) rotate(-45deg);
+        transform: translateY(-10px);
     }
 
     100%{
-        transform: translateY(10px) rotate(-45deg);
+        transform: translateY(10px);
     }
 }
